<resources>
    <string name="_new">new</string>
    <string name="a_network_error_occurred">A network error occurred</string>
    <string name="about">About</string>
    <string name="active_windows">Active Windows</string>
    <string name="add">Add</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="adrenotools_driver">Adrenotools Driver</string>
    <string name="advanced">Advanced</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Winlator</string>
    <string name="audio">Audio</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="auto">Auto</string>
    <string name="average_latency">Average Latency</string>
    <string name="background">Background</string>
    <string name="battery">Battery</string>
    <string name="binding">Binding</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_up">Binding Up</string>
    <string name="bindings">Bindings</string>
    <string name="both">Both</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="box64">Box64</string>
    <string name="box64_env_var_help__dynarec_bigblock">"Dynarec building BigBlock&lt;br /&gt;&lt;br /&gt; &lt;b&gt;0&lt;/b&gt; : Don't try to build block as big as possible&lt;br /&gt; &lt;b&gt;1&lt;/b&gt; : Build Dynarec block as big as possible&lt;br /&gt; &lt;b&gt;2&lt;/b&gt; : Build Dynarec block bigger (continue when block overlaps, but only for blocks in elf memory)&lt;br /&gt; &lt;b&gt;3&lt;/b&gt; : Build Dynarec block bigger (continue when block overlaps, for all types of memory)"</string>
    <string name="box64_env_var_help__dynarec_callret">Optimization of CALL/RET opcodes</string>
    <string name="box64_env_var_help__dynarec_fastnan">Generation of -NAN like on x86</string>
    <string name="box64_env_var_help__dynarec_fastround">"Generation of precise x86 rounding&lt;br /&gt;&lt;br /&gt; &lt;b&gt;0&lt;/b&gt; : Generate float/double -&gt; int rounding like on x86&lt;br /&gt; &lt;b&gt;1&lt;/b&gt; : Don't do anything special with edge case Rounding, to go as fast as possible (no INF/NAN/Overflow -&gt; MIN_INT conversion)&lt;br /&gt; &lt;b&gt;2&lt;/b&gt; : Everything from 1 plus also fast round of double -&gt; float (not taking into account current rounding mode)"</string>
    <string name="box64_env_var_help__dynarec_forward">Defines the max allowed forward value when building Block</string>
    <string name="box64_env_var_help__dynarec_nativeflags">The generated code will use native flags, if possible</string>
    <string name="box64_env_var_help__dynarec_safeflags">Handling of flags on CALL/RET opcodes&lt;br /&gt;&lt;br /&gt; &lt;b&gt;0&lt;/b&gt; : Treats CALL/RET as if it never needed flags (faster, unstable)&lt;br /&gt; &lt;b&gt;1&lt;/b&gt; : Most RET will need flags, most CALLS will not&lt;br /&gt; &lt;b&gt;2&lt;/b&gt; : All CALL/RET will need flags (slower)</string>
    <string name="box64_env_var_help__dynarec_strongmem">"Simulation of Strong Memory model&lt;br /&gt;&lt;br /&gt; &lt;b&gt;0&lt;/b&gt; : Don't try anything special&lt;br /&gt; &lt;b&gt;1&lt;/b&gt; : Enable some Memory Barrier when writing to memory (on some MOV opcode)&lt;br /&gt; &lt;b&gt;2&lt;/b&gt; : All 1 plus a Memory Barrier on every write to memory using MOV&lt;br /&gt; &lt;b&gt;3&lt;/b&gt; : All 2 plus Memory Barrier when reading from memory and on some SSE/SSE2 opcodes"</string>
    <string name="box64_env_var_help__dynarec_wait">Defines whether or not Dynarec will wait for the FillBlock to be ready</string>
    <string name="box64_env_var_help__dynarec_weakbarrier">Tweak the memory barriers to reduce the performance impact by strongmem&lt;br /&gt;&lt;br /&gt; &lt;b&gt;0&lt;/b&gt; : Use regular safe barrier&lt;br /&gt; &lt;b&gt;1&lt;/b&gt; : Use weak barriers to have more performance boost&lt;br /&gt; &lt;b&gt;2&lt;/b&gt; : All in 1, plus disabled the last write barriers</string>
    <string name="box64_env_var_help__dynarec_x87double">Use of Float/Double for x87 emulation</string>
    <string name="box64_logs">Box64 Logs</string>
    <string name="box64_preset">Box64 Preset</string>
    <string name="box64_version">Box64 Version</string>
    <string name="brightness">Brightness</string>
    <string name="bring_to_front">Bring to Front</string>
    <string name="browse">Browse</string>
    <string name="builtin_wine">Builtin (Wine)</string>
    <string name="cache">Cache</string>
    <string name="cancel">Cancel</string>
    <string name="capacity">Capacity</string>
    <string name="capture_pointer_on_external_mouse">Capture pointer on external mouse</string>
    <string name="channel">Channel</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="color">Color</string>
    <string name="color_adjustment">Color Adjustment</string>
    <string name="columns">Columns</string>
    <string name="configuration">Configuration</string>
    <string name="conservative">Conservative</string>
    <string name="container">Container</string>
    <string name="containers">Containers</string>
    <string name="contains">Contains</string>
    <string name="contrast">Contrast</string>
    <string name="controls_editor">Controls Editor</string>
    <string name="controls_profile">Controls Profile</string>
    <string name="copy">Copy</string>
    <string name="copying_files">Copying Files...</string>
    <string name="creating_container">Creating Container...</string>
    <string name="credits_and_third_party_apps">Credits and Third-party apps</string>
    <string name="current">Current</string>
    <string name="cursor_size">Cursor Size</string>
    <string name="cursor_speed">Cursor Speed</string>
    <string name="custom">Custom</string>
    <string name="custom_device">Custom Device</string>
    <string name="custom_text">Custom Text</string>
    <string name="cut">Cut</string>
    <string name="d3d_feature_level">D3D Feature Level</string>
    <string name="dark">Dark</string>
    <string name="ddraw_wrapper">DDraw Wrapper</string>
    <string name="desktop">Desktop</string>
    <string name="direct3d">Direct3D</string>
    <string name="directinput">DirectInput</string>
    <string name="directinput_mapper_type">DirectInput Mapper Type</string>
    <string name="directmusic">DirectMusic</string>
    <string name="directplay">DirectPlay</string>
    <string name="directshow">DirectShow</string>
    <string name="directsound">DirectSound</string>
    <string name="directx">DirectX</string>
    <string name="disable">Disable</string>
    <string name="disable_mouse_input">Disable Mouse Input</string>
    <string name="disable_vertex_array_bgra">Disable vertex array BGRA</string>
    <string name="disabled">Disabled</string>
    <string name="do_you_want_to_download_the_selected_profiles">Do you want to download the selected profiles?</string>
    <string name="do_you_want_to_duplicate_this_container">Do you want to duplicate this container?</string>
    <string name="do_you_want_to_duplicate_this_preset">Do you want to duplicate this preset?</string>
    <string name="do_you_want_to_duplicate_this_profile">Do you want to duplicate this profile?</string>
    <string name="do_you_want_to_end_this_process">Do you want to end this process?</string>
    <string name="do_you_want_to_reinstall_system_files">Do you want to reinstall system files?</string>
    <string name="do_you_want_to_remove_this_component_version">Do you want to remove this component version?</string>
    <string name="do_you_want_to_remove_this_container">Do you want to remove this container?</string>
    <string name="do_you_want_to_remove_this_controller">Do you want to remove this controller?</string>
    <string name="do_you_want_to_remove_this_file">Do you want to remove this file?</string>
    <string name="do_you_want_to_remove_this_preset">Do you want to remove this preset?</string>
    <string name="do_you_want_to_remove_this_profile">Do you want to remove this profile?</string>
    <string name="do_you_want_to_remove_this_wine_version">Do you want to remove this Wine version?</string>
    <string name="do_you_want_to_reset_configurations">Do you want to reset the configurations?</string>
    <string name="documents">Documents</string>
    <string name="download_file">Download File</string>
    <string name="downloading_file">Downloading File...</string>
    <string name="downloads">Downloads</string>
    <string name="dpi_font_size">DPI (Font Size)</string>
    <string name="drive">Drive</string>
    <string name="drive_c">Drive C:</string>
    <string name="drives">Drives</string>
    <string name="duplicate">Duplicate</string>
    <string name="duplicating_container">Duplicating Container...</string>
    <string name="dxwrapper">DX Wrapper</string>
    <string name="dxwrapper_help_content">&lt;i&gt;&lt;b&gt;WineD3D&lt;/b&gt;&lt;/i&gt; is a translation layer for DirectX 1-11 to OpenGL.&lt;br /&gt;&lt;br /&gt; &lt;i&gt;&lt;b&gt;DXVK&lt;/b&gt;&lt;/i&gt; is a translation layer for Direct3D 9-11 to Vulkan.&lt;br /&gt;&lt;br /&gt; &lt;i&gt;&lt;b&gt;VKD3D&lt;/b&gt;&lt;/i&gt; is a translation layer for Direct3D 12 API to Vulkan.&lt;br /&gt;&lt;br /&gt; &lt;i&gt;&lt;b&gt;CNC DDraw&lt;/b&gt;&lt;/i&gt; is an implementation of DirectDraw for better compatibility with classic games.</string>
    <string name="edit">Edit</string>
    <string name="edit_container">Edit Container</string>
    <string name="enable">Enable</string>
    <string name="enable_crt_shader">Enable CRT Shader</string>
    <string name="enable_csmt">Enable CSMT (Command Stream Multi-Thread)</string>
    <string name="enable_strict_shader_math">Enable Strict Shader Math</string>
    <string name="enable_vibration">Enable Vibration</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="external_controller">External Controller</string>
    <string name="file_manager">File Manager</string>
    <string name="general">General</string>
    <string name="gpu_name">GPU Name</string>
    <string name="graphics_driver">Graphics Driver</string>
    <string name="height">Height</string>
    <string name="hud_mode">HUD Mode</string>
    <string name="information">Information</string>
    <string name="letter">Letter</string>
    <string name="light">Light</string>
    <string name="mode">Mode</string>
    <string name="mouse_warp_override">Mouse Warp Override</string>
    <string name="name">Name</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="processor_affinity_32_bit_apps">Processor Affinity (32-bit apps)</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="renderer">Renderer</string>
    <string name="screen_size">Screen Size</string>
    <string name="settings">Settings</string>
    <string name="startup_selection">Startup Selection</string>
    <string name="storage_info">Storage Info</string>
    <string name="system">System</string>
    <string name="system_font">System Font</string>
    <string name="target_path">Target Path</string>
    <string name="theme">Theme</string>
    <string name="version">Version</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="width">Width</string>
    <string name="win_components">Win Components</string>
    <string name="windows_version">Windows Version</string>
    <string name="wine_configuration">Wine Configuration</string>
    <string name="wine_version">Wine Version</string>
</resources>