<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/icon_popup_menu_settings" android:id="@+id/menu_item_settings" android:title="@string/settings" android:iconTint="?colorAccent" />
    <item android:icon="@drawable/icon_popup_menu_copy" android:id="@+id/menu_item_copy" android:title="@string/copy" android:iconTint="?colorAccent" />
    <item android:icon="@drawable/icon_popup_menu_cut" android:id="@+id/menu_item_cut" android:title="@string/cut" android:iconTint="?colorAccent" />
    <item android:icon="@drawable/icon_popup_menu_remove" android:id="@+id/menu_item_remove" android:title="@string/remove" android:iconTint="?colorAccent" />
    <item android:icon="@drawable/icon_popup_menu_edit" android:id="@+id/menu_item_rename" android:title="@string/rename" android:iconTint="?colorAccent" />
    <item android:icon="@drawable/icon_popup_menu_add_favorite" android:id="@+id/menu_item_add_favorite" android:title="@string/add_to_favorites" android:iconTint="?colorAccent" />
    <item android:icon="@drawable/icon_popup_menu_info" android:id="@+id/menu_item_info" android:title="@string/information" android:iconTint="?colorAccent" />
</menu>
