<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" />
            <EditText android:id="@+id/ETName" android:inputType="textCapSentences" style="@style/EditText" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screen_size" />
                    <Spinner android:entries="@array/screen_size_entries" android:id="@+id/SScreenSize" android:layout_width="match_parent" style="@style/ComboBox" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@+id/LLCustomScreenSize" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/width" />
                        <EditText android:id="@+id/ETScreenWidth" android:layout_width="78.0dp" android:inputType="number" style="@style/EditText" />
                    </LinearLayout>
                    <TextView android:textSize="18.0dp" android:textStyle="bold" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dp" android:layout_marginRight="2.0dp" android:layout_marginBottom="4.0dp" android:text="x" />
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/height" />
                        <EditText android:id="@+id/ETScreenHeight" android:layout_width="78.0dp" android:inputType="number" style="@style/EditText" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/LLWineVersion" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wine_version" />
                <Spinner android:id="@+id/SWineVersion" android:layout_width="match_parent" style="@style/ComboBox" />
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/LLGraphicsDriver" android:layout_width="match_parent" android:layout_height="wrap_content" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dxwrapper" />
                <ImageView android:id="@+id/BTHelpDXWrapper" style="@style/HelpButton" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/LLDXWrapper" android:layout_width="match_parent" android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio_driver" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <Spinner android:entries="@array/audio_driver_entries" android:id="@+id/SAudioDriver" android:layout_width="0.0dp" android:layout_weight="1.0" style="@style/ComboBox" />
                <ImageButton android:id="@+id/BTAudioDriverConfig" android:src="@drawable/icon_audio_settings" style="@style/ListMenuButton" />
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hud_mode" />
            <Spinner android:entries="@array/hud_mode_entries" android:id="@+id/SHUDMode" android:layout_width="match_parent" style="@style/ComboBox" />
            <com.google.android.material.tabs.TabLayout android:id="@+id/TabLayout" android:background="@drawable/tab_layout_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:layout_marginBottom="4.0dp" app:tabGravity="center" app:tabMode="auto" app:tabTextColor="?tabTextColor">
                <com.google.android.material.tabs.TabItem android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/wine_configuration" />
                <com.google.android.material.tabs.TabItem android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/win_components" />
                <com.google.android.material.tabs.TabItem android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/environment_variables" />
                <com.google.android.material.tabs.TabItem android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/drives" />
                <com.google.android.material.tabs.TabItem android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/advanced" />
            </com.google.android.material.tabs.TabLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/LLTabWineConfiguration" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp">
                    <LinearLayout style="@style/FieldSet">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/theme" />
                        <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/RGDesktopTheme" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <RadioButton android:id="@+id/RBLight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/light" />
                            <RadioButton android:id="@+id/RBDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dark" />
                        </RadioGroup>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/background" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <Spinner android:entries="@array/desktop_background_type_entries" android:id="@+id/SDesktopBackgroundType" android:layout_width="0.0dp" android:layout_weight="1.0" style="@style/ComboBox" />
                            <com.winlator.widget.ColorPickerView android:id="@+id/CPVDesktopBackgroundColor" android:visibility="gone" android:layout_width="84.0dp" android:layout_height="wrap_content" />
                            <com.winlator.widget.ImagePickerView android:id="@+id/IPVDesktopBackgroundImage" android:visibility="gone" android:layout_width="84.0dp" android:layout_height="wrap_content" />
                        </LinearLayout>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_font" />
                        <Spinner android:entries="@array/system_font_entries" android:id="@+id/SSystemFont" android:layout_width="match_parent" style="@style/ComboBox" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dpi_font_size" />
                        <com.winlator.widget.SeekBar android:id="@+id/SBLogPixels" android:layout_width="match_parent" android:layout_height="wrap_content" app:maxValue="240" app:minValue="96" app:step="24" app:suffix=" dpi" />
                    </LinearLayout>
                    <TextView android:text="@string/desktop" style="@style/FieldSetLabel" />
                </FrameLayout>
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp">
                    <LinearLayout style="@style/FieldSet">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mouse_warp_override" />
                        <Spinner android:id="@+id/SMouseWarpOverride" android:layout_width="match_parent" style="@style/ComboBox" />
                    </LinearLayout>
                    <TextView android:text="@string/directinput" style="@style/FieldSetLabel" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/LLTabWinComponents" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp">
                    <LinearLayout android:id="@+id/LLWinComponentsDirectX" style="@style/FieldSet" />
                    <TextView android:text="@string/directx" style="@style/FieldSetLabel" />
                </FrameLayout>
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp">
                    <LinearLayout android:id="@+id/LLWinComponentsGeneral" style="@style/FieldSet" />
                    <TextView android:text="@string/general" style="@style/FieldSetLabel" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/LLTabEnvVars" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.winlator.widget.EnvVarsView android:id="@+id/EnvVarsView" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" />
                <View style="@style/HorizontalLine" />
                <Button android:layout_gravity="center_horizontal" android:id="@+id/BTAddEnvVar" android:layout_width="160.0dp" android:layout_height="wrap_content" android:text="@string/add" style="@style/ButtonNeutral" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/LLTabDrives" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:paddingLeft="20.0dp" android:paddingRight="20.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dp">
                    <TextView android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="@string/letter" />
                    <TextView android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="@string/target_path" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/LLDrives" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" />
                <TextView android:gravity="center" android:id="@+id/TVDrivesEmptyText" android:padding="16.0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/no_items_to_display" />
                <View style="@style/HorizontalLine" />
                <Button android:layout_gravity="center_horizontal" android:id="@+id/BTAddDrive" android:layout_width="160.0dp" android:layout_height="wrap_content" android:text="@string/add" style="@style/ButtonNeutral" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/LLTabAdvanced" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp">
                    <LinearLayout style="@style/FieldSet">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/box64_preset" />
                        <Spinner android:id="@+id/SBox64Preset" android:layout_width="match_parent" style="@style/ComboBox" />
                    </LinearLayout>
                    <TextView android:text="@string/box64" style="@style/FieldSetLabel" />
                </FrameLayout>
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp">
                    <LinearLayout style="@style/FieldSet">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/startup_selection" />
                        <Spinner android:entries="@array/startup_selection_entries" android:id="@+id/SStartupSelection" android:layout_width="match_parent" style="@style/ComboBox" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/windows_version" />
                        <Spinner android:id="@+id/SWinVersion" android:layout_width="match_parent" style="@style/ComboBox" />
                    </LinearLayout>
                    <TextView android:text="@string/system" style="@style/FieldSetLabel" />
                </FrameLayout>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/processor_affinity" />
                <com.winlator.widget.CPUListView android:gravity="center_horizontal" android:id="@+id/CPUListView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/processor_affinity_32_bit_apps" />
                <com.winlator.widget.CPUListView android:gravity="center_horizontal" android:id="@+id/CPUListViewWoW64" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="right|bottom" android:id="@+id/BTConfirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dp" android:src="@drawable/icon_confirm" android:tint="#ffffff" />
</FrameLayout>
