<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="200.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="300.0dp" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Spinner android:id="@+id/SVersion" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/ComboBox" />
            <LinearLayout android:id="@+id/WineD3DToolbox" style="@style/Toolbox">
                <ImageButton android:tag="install" android:src="@drawable/icon_install" style="@style/ListMenuButton" />
                <ImageButton android:tag="remove" android:layout_marginRight="0.0dp" android:src="@drawable/icon_remove" style="@style/ListMenuButton" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ddraw_wrapper" />
        <Spinner android:entries="@array/ddraw_wrapper_entries" android:id="@+id/SDDrawWrapper" android:layout_width="match_parent" style="@style/ComboBox" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/renderer" />
        <Spinner android:entries="@array/wined3d_renderer_entries" android:id="@+id/SRenderer" android:layout_width="match_parent" style="@style/ComboBox" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gpu_name" />
        <Spinner android:id="@+id/SGPUName" android:layout_width="match_parent" style="@style/ComboBox" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/offscreen_rendering_mode" />
        <Spinner android:id="@+id/SOffscreenRenderingMode" android:layout_width="match_parent" style="@style/ComboBox" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_memory_size" />
        <Spinner android:entries="@array/video_memory_size_entries" android:id="@+id/SVideoMemorySize" android:layout_width="match_parent" style="@style/ComboBox" />
        <CheckBox android:id="@+id/CBCSMT" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/enable_csmt" />
        <CheckBox android:id="@+id/CBStrictShaderMath" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enable_strict_shader_math" />
    </LinearLayout>
</ScrollView>
